--- a/main.Rmd
+++ b/main.Rmd
@@ -98,6 +98,67 @@ large, and scatterplot matrices (SPLOMs) could easily run out of pixels when pre
 <!-- harmonies and why it is not enough -->
 The paper (gravitas) narrows down the search from $^{N_C}P_2$ plots by identifying pairs of granularities that can be meaningfully examined together (a "harmony"), or when they cannot (a "clash"). However, even after excluding clashes, the list of harmonies left could be enormous for exhaustive exploration. Hence, there is a need to reduce the search even further by including only those harmonies for which variation within different categories is significant. Also, ranking the remaining harmonies based on how well they capture the variation in the measured variable could be potentially useful. 
 
+
+```{r intro_all}
+elec <- read_rds("data/elec.rds")
+
+id2_tsibble <- elec %>% 
+   filter(id == 2) %>% 
+   as_tsibble(index = date_time)
+  
+id4_tsibble <- elec %>% 
+   filter(id == 4) %>% 
+   as_tsibble(index = date_time)
+
+# hour-of-day and month-of-year (important pair) id2's behavior across different hours of the day very different across months, but for id4 behavior across different hours of the day is not likely a function of month.
+p1 <- id2_tsibble %>%
+   prob_plot("month_year",
+             "hour_day",
+             response = "kwh",
+             plot_type = "quantile",
+             symmetric = TRUE,
+             quantile_prob = c(0.1, 0.25,0.5,0.75, 0.9)) +
+  ggtitle("")
+
+p2 <- id4_tsibble %>%
+   prob_plot("month_year",
+             "hour_day",
+             response = "kwh",
+             plot_type = "quantile",
+             symmetric = TRUE,
+             quantile_prob = c(0.1, 0.25,0.5,0.75, 0.9)) + 
+  ggtitle("")
+
+# wknd_wday and week_month (important pair) id2's behavior across different hours of the day very different across months, but for id4 beahvior across different hours of the day is not likely a function of month.
+
+p3 <- id2_tsibble %>%
+   prob_plot("wknd_wday",
+             "week_month",
+             response = "kwh",
+             plot_type = "quantile",
+             symmetric = FALSE,
+             quantile_prob = c(0.25,0.5,0.75)) +
+  ggtitle("") #+ scale_x_discrete(breaks = seq(0, 23, 4))
+
+p4 <- id4_tsibble %>%
+   prob_plot("wknd_wday",
+             "week_month",
+             response = "kwh",
+             plot_type = "quantile",
+             symmetric = FALSE,
+             quantile_prob = c(0.25,0.5,0.75)) +
+  ggtitle("") #+ scale_x_discrete(breaks = seq(0, 23, 4))
+
+```
+
+```{r p1_p2}
+ggpubr::ggarrange(p1, p2, ncol = 2)
+```
+
+```{r p4_p3}
+ggpubr::ggarrange(p3, p4, ncol = 2)
+```
+
 Here, we aim to build a new measure to follow through these two main objectives:
 
 - To choose harmonies for which distributions of categories are significantly different 
@@ -400,7 +461,7 @@ smart_harmony %>%
   rename("rankun" = "r") %>% kable()
 ```
 
-## Null distribution
+## Null distribution of MMPD
 
 ### Normalised maximum distances follow standard Gumbel distribution
 
@@ -421,8 +482,6 @@ Behavior of the statistic - control simulation
  - To check if x-levels and facets are normalized
 (simulate with different distributions)
 (simulate with different x and facet levels)
-
-
 
 ## Size and power
 
@@ -575,56 +634,16 @@ Failure to reject the null hypothesis when there is in fact no significant effec
 ## Smart meter data of Australia {#sec:smartmeter}
 
 <!-- # how data looks -->
+
+
 Smart meters provide large quantities of measurements on energy usage for households across Australia. One of the customer trials [@smart-meter] conducted as part of the Smart Grid Smart City project in Newcastle, New South Wales and some parts of Sydney provides customer wise data on energy consumption for every half hour from February 2012 to March 2014. <!--It would be interesting to explore the energy consumption distribution for these customers and gain insights on their energy behavior which are lost either due to aggregation or looking only at coarser temporal units.-->The idea here is to show how to visualize the distribution of the energy consumption across different cyclic granularities in a systematic way to identify different behavioral patterns.
 
-<!-- and identify the extreme and regular households. -->
-
-<!-- ### Data structure for visualization: -->
-
-<!-- The data structure for a sample of 50 households from that trial is depicted in \autoref{tab:smart-data} where the variable `reading_datetime`, `customer_id` and `general_supply_kwh` denote the index, key and measured variable of the tsibble. -->
-<!-- <!-- We take a random sample of 50 households to see how we can achieve that.  -->
 
 
-```{r smart-data}
-# load("data/sm_cust50.Rdata")
-#
-# smart_data <- smart_meter <- sm_cust50 %>%
-#   as_tsibble() %>%
-#   dplyr::select(
-#     customer_id,
-#     reading_datetime,
-#     general_supply_kwh
-#   ) %>% head(n = 5)
-#
-#   knitr::kable(smart_data,
-#                format = "latex",
-#                booktabs = TRUE,
-#                caption = "Smart meter data structure with electricity demand for 50 households from SGSC project for every 30 minutes from 2012 to 2014.")
-```
-
-<!--of the tsibble and represents the time variable. The variable denoting different households represent the key of the tsibble and is the time series variable which needs to be analyzed.Data sets of the form <$C1$, $C2$, `general_supply_kwh`> will form the basis of exploration for each key in the data set, where the cyclic granularity $C1$ would be mapped to $x$ axis and `general_supply_kwh` to $y$ axis with the cyclic granularity $C2$ mapped to facet. Any geometry displaying the probability distribution of `general_supply_kwh` like boxplot, letter value, violin,
-ridge or highest density region plots can then be used to explore the data set.-->
 
 ### Cyclic granularities search and computation:
   
-The tsibble object `smart_meter10` from R package `gravitas` [@R-gravitas] consisting of `reading_datetime`, `customer_id` and `general_supply_kwh` denoting the index, key and measured variable of the tsibble is used to facilitate the systematic exploration. While trying to explore the energy behavior of these customers systematically across cyclic time granularities, the first thing to consider is which cyclic time granularities we can look at exhaustively. Let us consider conventional time deconstructions for a Gregorian calendar (second, minute, half-hour, hour, day, week, month, year). Since the interval of this tsibble is 30 minutes, the temporal granularities may range from half-hour to year. Considering $6$ linear granularities half-hour, hour, day, week, month and year in the hierarchy table, $N_C = (6*5/2) = 15$. <!--(via Section \ref{sec:data-structure}) circular or quasi-circular granularities that could be formed relating two linear granularities at a time.--> If $N_C$ seem too large, the smallest and largest linear granularities could be considered to be removed from the hierarchy table. We remove half-year and year to have $N_C = (4*3/2) = 6$ and obtain cyclic granularities namely "hour_day", "hour_week", "hour_month", "day_week", "day_month" and "week_month", read as "hour of the day", etc. Further, we add cyclic granularity day-type( "wknd_wday") to capture weekend and weekday behavior. Now that we have a list of cyclic granularities to look at, we should be able to compute the multiple-order-up granularities using Section \ref{sec:cyclic-calendar}. <!-- The lubridate package [@Grolemund2011-vm] provides tools to compute single-order-up granularities, \ref{sec:circular-gran-def} (for hour_day, hour_week and day_week) and \ref{sec:quasi-circular-gran-def} (for hour_month, day_month, week_month).  
-with the index set mapping half-hourly time periods to a set of positive integers.-->
-
-
-
-<!-- R package **gravitas** [@R-gravitas] is used to facilitate the systematic exploration here. While trying to explore the energy behavior of these customers systematically across cyclic time granularities, the first thing we should have at our disposal is to know which all cyclic time granularities we can look at exhaustively. Let us consider conventional time deconstructions for a Gregorian calendar (second, minute, half-hour, hour, day, week, month, year). Since the interval of this tsibble is 30 minutes, the temporal granularities may range from half-hour to year. Considering $6$ linear granularities half-hour, hour, day, week, month, year, there could be $(6*5/2) = 15$ circular or quasi-circular granularities that could be formed. If these options are considered too many, the most coarse temporal unit can be set to a “month” and some intermediate temporal units which might not be pertinent to the analysis like hhour could be dropped. Then we will be left with six cyclic granularites namely "hour_day", "hour_week", "hour_month", "day_week", "day_month" and "week_month". Now that we have a list of cyclic granularities to look at, we should be able to compute the multiple-order-up granularities using Sections \ref{sec:cyclic-calendar}. <!-- The lubridate package [@Grolemund2011-vm] provides tools to compute single-order-up granularities, \ref{sec:circular-gran-def} (for hour_day, hour_week and day_week) and \ref{sec:quasi-circular-gran-def} (for hour_month, day_month, week_month).  -->
-<!-- Here, the index set $Z=\{z: z \in \mathbb{Z}_{\geq 0}\}$ maps the half-hourly time instants to a set of positive integers. Then, multiple-order-up circular granularity $hour\_week$ and quasi-circular granularity $hour\_month$ could be computed from single-order-up granularities as follows: -->
-<!-- <!-- $$ hour\_day(z) = \lfloor z/2 \rfloor \mod 7$$ (Definition \autoref{def:circular}) -->
-<!-- \begin{align} -->
-<!--   hour\_week(z) =  day\_week(z) + 24*hour\_day(z) -->
-<!-- \end{align} -->
-
-<!-- <!-- $$ day\_month(z) =   \lfloor z/2*24 \rfloor  - \sum_{w=0}^{k-1}\vert T_{w \mod 12*4} \vert$$ (\autoref{def:quasi-circular}) -->
-<!-- \begin{align} -->
-<!-- hour\_month(z) =  hour\_day(z) + 24*day\_month(z) -->
-<!-- \end{align} -->
-
-<!-- These cyclic granularities are a function of the index variable and are computed based on if they are circular <!--(Section \ref{sec:circular-gran-def}), quasi-circular. <!--(Section \ref{sec:quasi- circular-gran-def}) or aperiodic (Section \ref{sec:aperiodic-gran-def})-->
+The tsibble object `smart_meter10` from R package `gravitas` [@R-gravitas] consisting of `reading_datetime`, `customer_id` and `general_supply_kwh` denoting the index, key and measured variable of the tsibble is used to facilitate the systematic exploration. While trying to explore the energy behavior of these customers systematically across cyclic time granularities, the first thing to consider is which cyclic time granularities we can look at exhaustively. Let us consider conventional time deconstructions for a Gregorian calendar (second, minute, half-hour, hour, day, week, month, year). Since the interval of this tsibble is 30 minutes, the temporal granularities may range from half-hour to year. Considering $6$ linear granularities half-hour, hour, day, week, month and year in the hierarchy table, $N_C = (6*5/2) = 15$. <!--(via Section \ref{sec:data-structure}) circular or quasi-circular granularities that could be formed relating two linear granularities at a time.--> If $N_C$ seem too large, the smallest and largest linear granularities could be considered to be removed from the hierarchy table. We remove half-year and year to have $N_C = (4*3/2) = 6$ and obtain cyclic granularities namely "hour_day", "hour_week", "hour_month", "day_week", "day_month" and "week_month", read as "hour of the day", etc. Further, we add cyclic granularity day-type( "wknd_wday") to capture weekend and weekday behavior. Now that we have a list of cyclic granularities to look at, we should be able to compute the multiple-order-up granularities using Section \ref{sec:cyclic-calendar}. 
 
 ```{r search, echo=FALSE, eval = FALSE}
 library(gravitas)
@@ -634,20 +653,6 @@ smart_meter %>%
                              "fortnight"))
 ```
 
-<!-- #smart_smart_search <- smart_meter %>% search_gran() -->
-<!-- #knitr::kable(smart_smart_search, format = "markdown") -->
-
-
-
-<!-- CONTENT CUT -->
-<!-- # ```{r search_limit1, echo=TRUE} -->
-<!-- # smart_meter10 %>% -->
-<!-- #   search_gran(highest_unit = "month") -->
-<!-- # ``` -->
-
-<!-- # smart_meter_limit1 <- smart_meter10 %>%  -->
-<!-- #   search_gran(highest_unit = "month") -->
-<!-- # knitr::kable(smart_meter_limit1, format = "markdown") -->
 
 ```{r search_gran_limit2, echo = FALSE, eval = FALSE}
 smart_meter10 %>% search_gran(
@@ -721,170 +726,6 @@ global_harmony <- sm %>%
     kable_styling()
 ```
 
-<!-- # smart_meter10 %>% gran_advice("wknd_wday", "hour_day") -->
-
-<!-- The median consumption or width of other bands doesn't vary much across seasons, implying extreme behavior or extreme customers does not vary across seasons much.  -->
-
-<!-- No need to share the same for 50 customers - cut down text and anyway nothing much interesting is coming -->
-
-<!-- ```{r wknd-wday50, fig.cap = "Quantile plot of energy consumption of 50 households across different hours of the day faceted by weekday and weekend. The quantiles are not different for weekdays and weekends implying either the behavior balances out among these customers or most of them do not behave differently for weekdays and weekends."} -->
-
-<!-- smart_meter <-  -->
-<!--   read_rds("data/sm_cust50.rds") -->
-
-<!-- smart_meter %>%  -->
-<!--   prob_plot("wknd_wday", -->
-<!--                             "hour_day", -->
-<!--                             response = "general_supply_kwh", -->
-<!--                             plot_type = "quantile", -->
-<!--             symmetric = FALSE,  -->
-<!--             quantile_prob = c(0.01, 0.1, 0.25, 0.5, 0.75, 0.9, 0.99)) + -->
-<!--   scale_y_sqrt() -->
-<!-- ``` -->
-
-<!-- # ```{r wknd-wday50_df} -->
-<!-- # smart_meter10 %>%  -->
-<!-- #   prob_plot("month_year", -->
-<!-- #                             "day_fortnight", -->
-<!-- #                             response = "general_supply_kwh", -->
-<!-- #                             plot_type = "quantile", -->
-<!-- #             symmetric = TRUE,  -->
-<!-- #             quantile_prob = c(0.01, 0.1, 0.25, 0.5, 0.75, 0.9, 0.99)) + -->
-<!-- #   scale_y_sqrt(breaks = c(0.1, 0.25, 0.5, 1:3)) -->
-<!-- # ``` -->
-
-<!-- ```{r my-hd, fig.cap="Area quantile plots of energy consumption across hours of the day faceted by months of the year. The black line is the median, whereas the pink band covers 25th to 75th percentile, the orange band covers 10th to 90th percentile and the green band covers 1st to 99th percentile. The median and quartile consumption increase in winter months, but extreme behavior represented by higher bands mostly stay the same across seasons. "} -->
-
-<!-- library(gravitas) -->
-<!-- library(tsibble) -->
-
-<!-- library(ggplot2) -->
-<!-- smart_meter %>% -->
-<!--   prob_plot("month_year", "hour_day", -->
-<!--     response = "general_supply_kwh", -->
-<!--     plot_type = "quantile", -->
-<!--     quantile_prob = c(0.01, 0.05, 0.1, 0.25, 0.5, 0.75, 0.9, 0.95, 0.99), -->
-<!--     symmetric = TRUE) + -->
-<!--   ggtitle("") + scale_y_sqrt(breaks = c(0.01, 0.1, 0.5, 1:3)) -->
-<!-- ``` -->
-
-<!-- Figure \ref{fig:dw-hd} shows that on morning peaks for Saturday and Sunday are higher and occurs in a later hour of the day compared to weekdays. This is true for both top 50% and 75% of the customers. Hence, this is indicative of the fact that at least 50% of the households in this subset has traditional work days (Mon-Fri) and weekends(Sat-Sun). All the percentiles peaks up in the morning hours and then drops in the afternoon, before again peaking up in the evening.  -->
-
-<!-- ```{r dw-hd} -->
-
-<!-- # Hourly usage across days of the week -->
-<!-- sm_cust50 %>% -->
-<!--   prob_plot("day_week",  -->
-<!--            "hour_day", -->
-<!--            "general_supply_kwh",  -->
-<!--            plot_type = "quantile",  -->
-<!--           quantile_prob = c(0.25, 0.5, 0.75), -->
-<!--            response = "general_supply_kwh", overlay = FALSE) + -->
-<!--   ggtitle("") -->
-
-<!-- ``` -->
-
-<!-- on half-hourly energy usage and detailed information on appliance use, climate, retail and distributor product offers, and other related factors.  -->
-
-<!-- typical and extreme behaviors of 50 households from that trial.  -->
-
-<!-- , and indeed many parts of the world. Households are distributed geographically and have different demographic properties such as the existence of solar panels, central heating or air conditioning. The behavioral patterns in households vary substantially, for example, some families use a dryer for their clothes while others hang them on a line, and some households might consist of night owls, while others are morning larks.  -->
-
-<!-- <!-- Existing approaches, why we need to drill down, or why we want to -- probability distributions -->
-<!-- It is common to see aggregates of usage across households, total kwh used each half-hour by state, for example, because energy companies need to understand maximum loads that they will have to plan ahead to accommodate. But studying overall energy use hides the distributions of usage at finer scales, and making it more difficult to find solutions to improve energy efficiency.  -->
-
-<!-- We want to look at the distribution of energy across coarser temporal granularities and then deep dive into finer temporal granularities. -->
-
-<!-- In Figure \ref{fig:day-fortnight} and \ref{fig:day-fortnight-agg} , the smart meter data is filtered for two customers to illustrate what kinds of insights can be drawn for the energy behavior of these two customers. -->
-
-<!-- can be added later -->
-
-<!-- In Figure \ref{fig:day-fortnight},to illustrate what kinds of insights can be drawn for the energy behavior of these two customers. it can be seen that for most days of the fortnight, the second household has much less consumption than the first one. However, there is additional information that we can derive looking at the distribution. If we consider letter value F as a regular behavior and letter values beyond F as not-so-regular behavior, we can conclude that the regular behavior of the first household is more stable than the second household. However, the distribution of tail of the first household is more variable, observed through distinct letter values, implying that their not-so-regular behavior is quite extreme. This shows, how looking at the distribution of the dependent variable can throw more light on the energy behavior of the customers, which are lost using aggregate or summary statistics.  -->
-
-<!-- # ```{r day-fortnight_agg, echo = FALSE} -->
-<!-- # library(lvplot) -->
-<!-- # library(ggplot2) -->
-<!-- # library(dplyr) -->
-<!-- # library(tibble) -->
-<!-- # library(gravitas) -->
-<!-- # library(tidyr) -->
-<!-- # smart_meter10 %>%  -->
-<!-- #   filter(customer_id %in% c(10006704, 10017936)) %>%  -->
-<!-- #   create_gran("day_fortnight") %>% -->
-<!-- #   as_tibble() %>%  -->
-<!-- #   group_by(customer_id, day_fortnight) %>%  -->
-<!-- #   summarize(median= log(median(general_supply_kwh)), -->
-<!-- #             total = log(sum(general_supply_kwh))) %>%  -->
-<!-- #   gather("daily_consumption", "value", - c(customer_id, day_fortnight)) %>%  -->
-<!-- #   ggplot2::ggplot(aes( -->
-<!-- #     x = as.factor(day_fortnight), -->
-<!-- #     y = value,  -->
-<!-- #     color = daily_consumption, -->
-<!-- #     group = daily_consumption)) + -->
-<!-- #   geom_line() + -->
-<!-- #   xlab("day_fortnight") + -->
-<!-- #   ylab("general_supply_kwh") +  -->
-<!-- #   facet_wrap(~customer_id) +  -->
-<!-- #   theme_bw()  -->
-
-<!-- # smart_meter10 %>%  -->
-<!-- #   filter(customer_id %in% c(10006704, 10017936)) %>%  -->
-<!-- #   create_gran("day_fortnight") %>% -->
-<!-- #   as_tibble() %>%  -->
-<!-- #   group_by(customer_id, day_fortnight) %>%  -->
-<!-- #   summarize(median_consumption= median(general_supply_kwh)) %>% -->
-<!-- #   ggplot2::ggplot(aes( -->
-<!-- #     x = as.factor(day_fortnight), -->
-<!-- #     y = median_consumption, -->
-<!-- #     color =  customer_id, -->
-<!-- #     group = customer_id)) + -->
-<!-- #   geom_line() + -->
-<!-- #   xlab("day_fortnight") + -->
-<!-- #   ylab("general_supply_kwh") +  -->
-<!-- #   theme_bw()  -->
-<!-- ``` -->
-
-<!-- ```{r day-fortnight, fig.cap="Letter value plot of two households across days of the fortnight. M, F, E, D and C represents the letter values of energy consumption. Regular behavior (within letter value F) is more variable for the 2nd household, whereas extreme behavior (beyond letter value F) is varying more for the first household."} -->
-<!-- library(lvplot) -->
-<!-- library(ggplot2) -->
-<!-- library(dplyr) -->
-<!-- library(tibble) -->
-<!-- library(gravitas) -->
-<!-- smart_meter10 %>% -->
-<!--   filter(customer_id %in% c(10006704, 10017936)) %>%  -->
-<!--   create_gran("day_fortnight") %>% -->
-<!--   ggplot2::ggplot(aes( -->
-<!--     x = as.factor(day_fortnight), -->
-<!--     y = general_supply_kwh)) + -->
-<!--   xlab("day_fortnight") + -->
-<!--   geom_lv( -->
-<!--     outlier.colour = "red", -->
-<!--     aes(fill = ..LV..), -->
-<!--     k = 5) + -->
-<!--   facet_wrap(~customer_id) +  -->
-<!--   scale_fill_lv() + -->
-<!--   theme_bw() + -->
-<!--   scale_y_sqrt()  -->
-<!-- ``` -->
-
-<!-- Figure \autoref{fig:my-hd} shows the overlay quantile plot of energy consumption of 50 households. The black line is the median, whereas the pink band covers 25th to 75th percentile, the orange band covers 10th to 90th percentile and the green band covers 1st to 99th percentile. Each facet represents a month and energy consumption across each hours of the day is shown inside each facet. It can be observed that the median is very close (and hence not distinctly visible) to the lower boundaries of all the other bands implying energy consumption for these households are extremely left skewed.75% of the households has distinct higher evening peaks compared to morning peaks, especially in the winter months. The top 5% households behave very differently than even the top 10% households in terms of total energy consumption across hours of the day.  -->
-
-<!-- # ```{r is_harmony, echo= TRUE} -->
-<!-- # smart_meter10 %>%  -->
-<!-- #   is_harmony(gran1 = "hour_day",  -->
-<!-- #              gran2 = "day_week") -->
-<!-- #  -->
-<!-- # smart_meter10 %>% -->
-<!-- #   is_harmony(gran1 = "hour_day",  -->
-<!-- #              gran2 = "day_week",  -->
-<!-- #              facet_h = 14) -->
-<!-- #  -->
-<!-- # smart_meter10 %>%  -->
-<!-- #   is_harmony(gran1 = "day_month", -->
-<!-- #              gran2 = "week_month") -->
-<!-- # ``` -->
-
-<!-- Boxplot of energy consumption is shown across `wknd_wday` (facet) and `hour_day` (x-axis) for the same two households. For the first household, the shape of the distribution does not change significantly for weekdays and weekends. The distribution is roughly smooth with a morning and an evening peak. -->
 
 In \autoref{fig:bothcust} (b), <!--the distribution of energy consumption is plotted across the harmony pair (weekday/weekend, hour of the day) through an area quantile plot-->the black line is the median, whereas the purple band covers 25th to 75th percentile, the orange band covers 10th to 90th percentile and the green band covers 1st to 99th percentile. The first facet represents the weekday behavior while the second one displays the weekend behavior and energy consumption across each hours of the day is shown inside each facet. The energy consumption is extremely (positive- or right-) skewed with the 1st, 10th and 25th percentile lying relatively close whereas 75th, 90th and 99th lying further away from each other. This is common across both weekdays and weekends. For the first few hours on weekdays, median energy consumption starts and continues to be higher for longer as compared to weekends.
 
@@ -893,22 +734,10 @@ Consider looking at violin plots instead of quantile plots to look at the same d
 
 
 
-<!-- If we consider letter value F as a regular behavior and letter values beyond F as not-so-regular behavior, we can conclude that the regular behavior of the first household is more stable than the second household. However, the distribution of tail of the first household is more variable, observed through distinct letter values, implying that their not-so-regular behavior is quite extreme. This shows, how looking at the distribution of the dependent variable can throw more light on the energy behavior of the customers, which are lost using aggregate or summary statistics. -->
-
 
 ```{r bothcust, fig.cap = "Energy consumption of a single customer shown with different distribution displays, and granularity arrangements. Two granularities are used: hour of the day (I) and weekday/weekend (II). Plot (a) shows granularity I facetted by granularity II, and plots (b), (c) shows the converse mapping. Plot (a) makes a comparison of usage by workday within each hour of the day using side-by-side boxplots. Generally, on a work day there is more consumption early in the day.  Plots (b) and (c) examine the temporal trend of consumption over the course of a day, separately for the type of day. Plot (b) uses an area quantile to put the emphasis on the time series, for example, the median consumption over time shows prolonged usage in the morning on weekdays. Plot (c) uses a violin plot to place emphasis on distributional differences across hours. It can be seen that the morning use on weekdays is bimodal, some work days there is low usage, which might indicate the person is working from home and also having a late start.", out.width="90%"}
 
-# plot for only customer is shown
-# cust1 <- smart_meter10 %>%
-# filter(customer_id %in% c(10006704)) %>%
-#   prob_plot("wknd_wday",
-#                             "hour_day",
-#                             response = "general_supply_kwh",
-#                             plot_type = "quantile",
-#             symmetric = FALSE,
-#             quantile_prob = c(0.25, 0.5, 0.75, 0.9))
-#   scale_y_sqrt() +
-#   ggtitle("Energy consumption distribution for customer id: 10006704")
+
 cust2_quantile <- smart_meter10 %>%
   filter(customer_id %in% c(10017936)) %>%
   prob_plot("wknd_wday",
@@ -922,15 +751,6 @@ cust2_quantile <- smart_meter10 %>%
   #ggtitle(" (b) Area quantile plot faceted by weekend-weekday") +
   ylab("electricity demand [KWh]") + xlab("hours of the day") + ggtitle("") + ylab("")+ 
   theme_minimal()
-#
-# smart_meter10 %>%
-#   filter(customer_id %in% c(10006704)) %>%
-#   prob_plot("wknd_wday",
-#                             "hour_day",
-#                             response = "general_supply_kwh",
-#                             plot_type = "violin") +
-#   scale_y_sqrt() +
-#   ggtitle("Energy consumption distribution for customer id: 10006704")
 
 cust2_violin <- smart_meter10 %>%
   filter(customer_id %in% c(10017936)) %>%
